# PeterThePedant_Bot

./: bot.py  dictionary_api.py  pyproject.toml  requirements.txt
commands/: __init__.py  define.py
services/: __init__.py  dress_definition.py
tests/: test_api_funcs.py
